# github-repo-explorer

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/src/: main.py
frontend/: next.config.ts  orval.config.ts  package-lock.json  package.json
frontend/.git.backup/: index
frontend/.git.backup/logs/: HEAD
frontend/.git.backup/refs/heads/: main
frontend/src/api/: clients.ts  generated.ts  index.ts
frontend/src/app/: page.tsx
frontend/src/components/: PageHeader.tsx  PaginationControls.tsx  RepositoryList.tsx  ResultsSummary.tsx  SearchFilters.tsx
frontend/src/hooks/: useRepositorySearch.ts
frontend/src/lib/: api.ts
frontend/src/types/: api.ts  components.ts  search.ts
