[project]
name = "github-repo-explorer-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuki Masuda",email = "uniuni0141@docomo.ne.jp"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
